--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <h1>Hi!</h1>
+        <h1>Hi from Prime!</h1>
     </body>
 </html>
